# GFFx

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  GFFx_CLI_Manual.md  LICENSE  README.md  RELEASENOTE.md  Readme.md  gffx_manual.md
.github/workflows/: rust.yml
.ipynb_checkpoints/: Cargo-checkpoint.toml  GFFx_CLI_Manual-checkpoint.md  gffx_manual-checkpoint.md
gffx_v0.3.2/.ipynb_checkpoints/: README-checkpoint.md
gffx_v0.3.2/src/: lib.rs
gffx_v0.3.2/src/extract/.ipynb_checkpoints/: mod-checkpoint.rs
gffx_v0.3.2/src/index_loader/: a2f.rs  gof.rs  mod.rs
src/: commands.rs  index_builder.rs  lib.rs  main.rs  utils.rs
src/commands/: coverage.rs  depth.rs  extract.rs  index.rs  intersect.rs  sample.rs  search.rs
src/extract/: mod.rs
src/extract/.ipynb_checkpoints/: mod-Copy1-checkpoint.rs  mod-checkpoint.rs
src/index/: mod.rs
src/index_builder/: core.rs  index_builder.rs  index_builder.rs.bk  mod.rs
src/index_builder/.ipynb_checkpoints/: index_builder-checkpoint.rs
src/index_loader/: core.rs  fts.rs  gof.rs  index_loader.rs  mod.rs  prt.rs
src/index_loader/.ipynb_checkpoints/: core-checkpoint.rs
src/intersect/: mod timing.rs  mod.rs  mod.rs.bk  readme.txt
src/intersect/.ipynb_checkpoints/: mod.rs-checkpoint.bk  mod.rs-checkpoint.bk2  mod.rs-checkpoint.bk3
src/search/: mod.rs
src/search/.ipynb_checkpoints/: mod-checkpoint.rs
src/sort/: mod.rs
src/utils/: common.rs  mod.rs  timing.rs  tree.rs  tree_index.rs  tree_io.rs  utils.rs
src/utils/.ipynb_checkpoints/: mod-checkpoint.rs  serial_interval_trees-checkpoint.rs
(+1 files in other folders)
